--- a/Saurabh/style.css
+++ b/Saurabh/style.css
@@ -144,7 +144,7 @@ section {
 }
 
 .home-content h3:nth-of-type(2) {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1.5rem;
 }
 
 span {
@@ -542,10 +542,12 @@ i {
         padding: 7rem 3% 2rem;
     }
 
-    
+    .home-content h3 {
+        font-size: 24px;
+        padding: 1.6rem 0 1rem 1rem;
+    }
 
     .home-content p {
-        margin-top: -12px;
         width: 100%;
         padding: 10px;
         font-size: 16px;
@@ -637,7 +639,7 @@ i {
     }
 
     .footer-text p {
-        font-size: 12px;
+        font-size: 11px;
 
     }
 
@@ -659,12 +661,4 @@ i {
     section {
         padding: 10rem 3% 2rem;
     }
-
-    .footer {
-        padding: 2rem 3%;
-    }
-}
-
-.phone-media {
-    display: none;
 }
